@@ -276,19 +276,19 @@ RaceSelect::setWidgetPositionsAndDrawDecorations()
 	std::list<CourseData>::iterator elem;
 	elem = mp_raceListbox->getCurrentItem();
 
-    glDisable( GL_TEXTURE_2D );
+    gl::Disable( GL_TEXTURE_2D );
 
-    glColor4f( 1.0, 1.0, 1.0, 1.0 );
-    glBegin( GL_QUADS );
+    gl::Color( pp::Color::white );
+    gl::Begin( GL_QUADS );
     {
-	glVertex2f( x_org+box_width-140, y_org+66 );
-	glVertex2f( x_org+box_width, y_org+66 );
-	glVertex2f( x_org+box_width, y_org+66+107 );
-	glVertex2f( x_org+box_width-140, y_org+66+107 );
+	gl::Vertex( x_org+box_width-140, y_org+66 );
+	gl::Vertex( x_org+box_width, y_org+66 );
+	gl::Vertex( x_org+box_width, y_org+66+107 );
+	gl::Vertex( x_org+box_width-140, y_org+66+107 );
     }
-    glEnd();
+    gl::End();
 
-    glEnable( GL_TEXTURE_2D );
+    gl::Enable( GL_TEXTURE_2D );
 
 	//current_course = (*elem).course;
 	//if ( !get_texture_binding( current_course, &texobj ) ) {
@@ -298,23 +298,23 @@ RaceSelect::setWidgetPositionsAndDrawDecorations()
 	}
     }
 
-    glBindTexture( GL_TEXTURE_2D, texobj );
+    gl::BindTexture( GL_TEXTURE_2D, texobj );
 
-    glBegin( GL_QUADS );
+    gl::Begin( GL_QUADS );
     {
-	glTexCoord2d( 0, 0);
-	glVertex2f( x_org+box_width-136, y_org+70 );
+	gl::TexCoord( 0, 0);
+	gl::Vertex( x_org+box_width-136, y_org+70 );
 
-	glTexCoord2d( 1, 0);
-	glVertex2f( x_org+box_width-4, y_org+70 );
+	gl::TexCoord( 1, 0);
+	gl::Vertex( x_org+box_width-4, y_org+70 );
 
-	glTexCoord2d( 1, 1);
-	glVertex2f( x_org+box_width-4, y_org+70+99 );
+	gl::TexCoord( 1, 1);
+	gl::Vertex( x_org+box_width-4, y_org+70+99 );
 
-	glTexCoord2d( 0, 1);
-	glVertex2f( x_org+box_width-136, y_org+70+99 );
+	gl::TexCoord( 0, 1);
+	gl::Vertex( x_org+box_width-136, y_org+70+99 );
     }
-    glEnd();
+    gl::End();
 }
 
 
